--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +176,341 @@
     "            self.df2m.to_excel(writer, sheet_name= f'2 month change {today}')\n",
     "            self.df3m.to_excel(writer, sheet_name= f'3 month change {today}')\n",
     "            self.final_df.to_excel(writer, sheet_name= f'Total Dataframe {today}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1d</th>\n",
+       "      <th>2d</th>\n",
+       "      <th>7d</th>\n",
+       "      <th>14d</th>\n",
+       "      <th>1m</th>\n",
+       "      <th>2m</th>\n",
+       "      <th>3m</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ethereum</th>\n",
+       "      <td>-0.020908</td>\n",
+       "      <td>-0.054196</td>\n",
+       "      <td>0.009843</td>\n",
+       "      <td>0.003181</td>\n",
+       "      <td>-0.024911</td>\n",
+       "      <td>0.080388</td>\n",
+       "      <td>0.053294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Avalanche</th>\n",
+       "      <td>-0.031383</td>\n",
+       "      <td>-0.070583</td>\n",
+       "      <td>-0.085492</td>\n",
+       "      <td>-0.054070</td>\n",
+       "      <td>-0.132023</td>\n",
+       "      <td>-0.134497</td>\n",
+       "      <td>-0.224275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Polygon</th>\n",
+       "      <td>-0.032241</td>\n",
+       "      <td>-0.058451</td>\n",
+       "      <td>-0.036210</td>\n",
+       "      <td>-0.016760</td>\n",
+       "      <td>-0.068537</td>\n",
+       "      <td>-0.030559</td>\n",
+       "      <td>-0.111829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moonriver</th>\n",
+       "      <td>-0.024102</td>\n",
+       "      <td>-0.049719</td>\n",
+       "      <td>-0.045549</td>\n",
+       "      <td>-0.025655</td>\n",
+       "      <td>-0.132612</td>\n",
+       "      <td>-0.311914</td>\n",
+       "      <td>-0.473301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Harmony</th>\n",
+       "      <td>-0.039884</td>\n",
+       "      <td>-0.088742</td>\n",
+       "      <td>-0.093587</td>\n",
+       "      <td>-0.141391</td>\n",
+       "      <td>-0.189205</td>\n",
+       "      <td>-0.152688</td>\n",
+       "      <td>-0.414415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stargaze</th>\n",
+       "      <td>-0.042433</td>\n",
+       "      <td>-0.056690</td>\n",
+       "      <td>0.057404</td>\n",
+       "      <td>0.021005</td>\n",
+       "      <td>0.079227</td>\n",
+       "      <td>0.524059</td>\n",
+       "      <td>2.650297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libre</th>\n",
+       "      <td>-0.033826</td>\n",
+       "      <td>-0.062486</td>\n",
+       "      <td>-0.104680</td>\n",
+       "      <td>-0.086245</td>\n",
+       "      <td>-0.100807</td>\n",
+       "      <td>0.053272</td>\n",
+       "      <td>-0.139674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Umee</th>\n",
+       "      <td>-0.002435</td>\n",
+       "      <td>-0.020303</td>\n",
+       "      <td>-0.048263</td>\n",
+       "      <td>0.121674</td>\n",
+       "      <td>0.186392</td>\n",
+       "      <td>0.410275</td>\n",
+       "      <td>1.340604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bitindi</th>\n",
+       "      <td>-0.109880</td>\n",
+       "      <td>-0.166944</td>\n",
+       "      <td>-0.041606</td>\n",
+       "      <td>0.005302</td>\n",
+       "      <td>-0.277542</td>\n",
+       "      <td>0.544418</td>\n",
+       "      <td>1.196554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WEMIX</th>\n",
+       "      <td>-0.014814</td>\n",
+       "      <td>-0.063902</td>\n",
+       "      <td>-0.112649</td>\n",
+       "      <td>-0.079843</td>\n",
+       "      <td>0.004157</td>\n",
+       "      <td>0.147394</td>\n",
+       "      <td>0.140397</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>169 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 1d        2d        7d       14d        1m        2m  \\\n",
+       "name                                                                    \n",
+       "Ethereum  -0.020908 -0.054196  0.009843  0.003181 -0.024911  0.080388   \n",
+       "Avalanche -0.031383 -0.070583 -0.085492 -0.054070 -0.132023 -0.134497   \n",
+       "Polygon   -0.032241 -0.058451 -0.036210 -0.016760 -0.068537 -0.030559   \n",
+       "Moonriver -0.024102 -0.049719 -0.045549 -0.025655 -0.132612 -0.311914   \n",
+       "Harmony   -0.039884 -0.088742 -0.093587 -0.141391 -0.189205 -0.152688   \n",
+       "...             ...       ...       ...       ...       ...       ...   \n",
+       "Stargaze  -0.042433 -0.056690  0.057404  0.021005  0.079227  0.524059   \n",
+       "Libre     -0.033826 -0.062486 -0.104680 -0.086245 -0.100807  0.053272   \n",
+       "Umee      -0.002435 -0.020303 -0.048263  0.121674  0.186392  0.410275   \n",
+       "Bitindi   -0.109880 -0.166944 -0.041606  0.005302 -0.277542  0.544418   \n",
+       "WEMIX     -0.014814 -0.063902 -0.112649 -0.079843  0.004157  0.147394   \n",
+       "\n",
+       "                 3m  \n",
+       "name                 \n",
+       "Ethereum   0.053294  \n",
+       "Avalanche -0.224275  \n",
+       "Polygon   -0.111829  \n",
+       "Moonriver -0.473301  \n",
+       "Harmony   -0.414415  \n",
+       "...             ...  \n",
+       "Stargaze   2.650297  \n",
+       "Libre     -0.139674  \n",
+       "Umee       1.340604  \n",
+       "Bitindi    1.196554  \n",
+       "WEMIX      0.140397  \n",
+       "\n",
+       "[169 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create an instance and diplay the full dataframe\n",
+    "\n",
+    "tvl = TVL()\n",
+    "tvl.get_tvl()\n",
+    "tvl.calc_change()\n",
+    "tvl.create_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "Stacks       0.247291\n",
+      "Energi       0.122738\n",
+      "Stride       0.046615\n",
+      "TomoChain    0.034649\n",
+      "CLV          0.017228\n",
+      "               ...   \n",
+      "Syscoin     -0.117079\n",
+      "DefiChain   -0.135287\n",
+      "Flare       -0.229290\n",
+      "MUUCHAIN    -0.331418\n",
+      "Kekchain    -0.382137\n",
+      "Name: 1d, Length: 169, dtype: float64\n",
+      "\n",
+      "\n",
+      "name\n",
+      "Polis          0.404483\n",
+      "Stacks         0.196774\n",
+      "Songbird       0.113208\n",
+      "Energi         0.030471\n",
+      "Stride         0.008733\n",
+      "                 ...   \n",
+      "Bitindi       -0.166944\n",
+      "EthereumPoW   -0.170587\n",
+      "Flare         -0.256670\n",
+      "MUUCHAIN      -0.257377\n",
+      "Kekchain      -0.391166\n",
+      "Name: 2d, Length: 169, dtype: float64\n",
+      "\n",
+      "\n",
+      "name\n",
+      "Omax           1.516436\n",
+      "Kardia         0.573218\n",
+      "Stacks         0.201007\n",
+      "Moonbeam       0.114206\n",
+      "TomoChain      0.105188\n",
+      "                 ...   \n",
+      "EthereumPoW   -0.215988\n",
+      "Sifchain      -0.242975\n",
+      "Flare         -0.245318\n",
+      "Dexit         -0.260743\n",
+      "Energi        -0.276356\n",
+      "Name: 7d, Length: 169, dtype: float64\n",
+      "\n",
+      "\n",
+      "name\n",
+      "Hydra           2.763703\n",
+      "Omax            1.882119\n",
+      "Filecoin        0.973796\n",
+      "Kekchain        0.655203\n",
+      "Nova Network    0.643822\n",
+      "                  ...   \n",
+      "Theta          -0.303736\n",
+      "Dexit          -0.355356\n",
+      "Flare          -0.387859\n",
+      "Wax            -0.390941\n",
+      "Energi         -0.482434\n",
+      "Name: 14d, Length: 169, dtype: float64\n",
+      "\n",
+      "\n",
+      "name\n",
+      "Hydra       2.554291\n",
+      "Filecoin    2.476363\n",
+      "Stellar     1.747987\n",
+      "Omax        1.577223\n",
+      "Secret      1.425012\n",
+      "              ...   \n",
+      "Elastos    -0.548447\n",
+      "Energi     -0.636738\n",
+      "Dexit      -0.672597\n",
+      "Oasis      -0.773119\n",
+      "REI        -0.890348\n",
+      "Name: 1m, Length: 169, dtype: float64\n",
+      "\n",
+      "\n",
+      "name\n",
+      "Doge        7.258992\n",
+      "Starknet    4.633042\n",
+      "Filecoin    2.569123\n",
+      "Litecoin    2.522293\n",
+      "Kekchain    1.997605\n",
+      "              ...   \n",
+      "Aurora     -0.670746\n",
+      "Oasis      -0.792830\n",
+      "REI        -0.892971\n",
+      "Dexit      -0.984883\n",
+      "Hoo        -1.000000\n",
+      "Name: 2m, Length: 169, dtype: float64\n",
+      "\n",
+      "\n",
+      "name\n",
+      "TON         17.496643\n",
+      "Starknet     6.767792\n",
+      "Doge         5.361759\n",
+      "Conflux      3.433619\n",
+      "Filecoin     3.178513\n",
+      "              ...    \n",
+      "Oasis       -0.796879\n",
+      "Theta       -0.893145\n",
+      "REI         -0.905289\n",
+      "Dexit       -0.971707\n",
+      "Hoo         -1.000000\n",
+      "Name: 3m, Length: 169, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "tvl.sort_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tvl.write_to_excel()"
    ]
   }
  ],
